[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "unveil"
version = "0.1.0"
requires-python = ">=3.8"
dependencies = [
    "aiohttp>=3.10.11",
    "cachetools>=5.5.2",
    "dnspython>=2.6.1",
    "lxml>=5.3.1",
    "psutil>=7.0.0",
    "pycountry>=24.6.1",
    "pydantic>=2.10.6",
    "requests>=2.32.3",
    "typer>=0.15.2",
]

[project.scripts]
unveil = "unveil.unveil:app"
